[YMCA-1512] Fixing problems on mobile.

--- a/docroot/themes/custom/ymca/sass/ysr_2017/_modals.scss
+++ b/docroot/themes/custom/ymca/sass/ysr_2017/_modals.scss
@@ -268,17 +268,6 @@
     }
   }
 
-
-  .compain-facility-access-hint-wrapper {
-
-    @include breakpoint($mobile-max) {
-      &.collapse {
-        display: block;
-        height: auto !important;
-      }
-    }
-  }
-
   .compain-facility-access-hint {
     @include rem(background-position, 20px bottom);
     @include rem(background-size, auto 190px);
